# NeoNet

./: .gitignore  Cargo.toml  README.md  SETUP.md  openapi.yaml
.github/workflows/: release.yml
crates/neonet-core/: Cargo.toml
crates/neonet-core/src/: crdt_state.rs  event.rs  event_kind.rs  identity.rs  lib.rs  node.rs  room.rs  store.rs  sync.rs
crates/neonet-crypto/: Cargo.toml
crates/neonet-crypto/src/: aead.rs  encoding.rs  hash.rs  key_exchange.rs  lib.rs  sign.rs
crates/neonet-node/: Cargo.toml
crates/neonet-node/src/: auth.rs  cli.rs  commands.rs  config.rs  db.rs  keystore.rs  main.rs  quic.rs  relay.rs  rendezvous_server.rs  session.rs  state.rs  ws.rs
crates/neonet-node/src/api/: files.rs  identity.rs  members.rs  messages.rs  mod.rs  peers.rs  rooms.rs
crates/neonet-proto/: Cargo.toml
crates/neonet-proto/src/: bytes64.rs  codec.rs  dht.rs  frame.rs  handshake.rs  lib.rs  rendezvous.rs  serve.rs
docker/relay/: .env.example  Dockerfile  README.md  config.toml  docker-compose.yml
docker/rendezvous/: .env.example  Dockerfile  README.md  config.toml  docker-compose.yml
docs/:  06-sync.md   08-keystore.md  01-concept.md  02-network.md  03-handshake.md  04-dht.md  05-romms.md  07-api.md  09-cli.md
src/: lib.rs  main.rs
src/api/: init.rs  mod.rs
src/api/v1/: core.rs  home.rs  main.rs  mod.rs
src/helper/: cookie.rs  find_insert.rs  functions.rs  mod.rs  replace_in_body.rs  request.rs  start.rs  trace.rs
utils/: ascii.art  types.json
