[package]
name = "neonet"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
reqwest = { version = "0.12.4", features = ["blocking", "json", "stream"] }
serde = "1.0.197"
serde_json = "1.0.114"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = "1.7.0"
regex = "1.10.3"
comrak = "0.24.1"
rand = "0.8"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19.0"
futures = "0.3.30"
qstring = "0.7"
base64 = "0.22.1"
async-stream = "0.3"
urlencoding = "2.1.3"
anyhow = "1.0.100"
