[workspace]
members = [
    "crates/neonet-core",
    "crates/neonet-crypto",
    "crates/neonet-proto",
    "crates/neonet-node",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Internal crates
neonet-core = { path = "crates/neonet-core" }
neonet-crypto = { path = "crates/neonet-crypto" }
neonet-proto = { path = "crates/neonet-proto" }

# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
blake3 = "1"
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

# CRDT
crdts = "7"

# RNG
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
toml = "0.8"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# QUIC
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Async / HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
actix-web = "4"
actix-ws = "0.3"

# Storage
rusqlite = { version = "0.35", features = ["bundled"] }

# Bloom filter / LRU cache
bloomfilter = "1"
lru = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }
rpassword = "7"
indicatif = "0.17"
colored = "3"
comfy-table = "7"

# Utilities
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"

# Unix syscalls (stop daemon via SIGTERM)
libc = "0.2"
