[package]
name = "neonet-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire serialization for NeoNet events, state, and rendezvous discovery"

[dependencies]
neonet-core = { workspace = true }
neonet-crypto = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
actix-web = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
